--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "meeting-frontend": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "meeting-frontend"
+    }
+  },
+  "defaultProject": "meeting-frontend",
+  "cli": {
+    "analytics": "a93ed936-f0ff-4ed0-95c3-58537bf0e23f"
+  }
 }
